descomentando archivotest graficos